--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name='viewport' content='width=device-width initial-scale=1.0'>
     <title>Scented</title>
     <link rel="stylesheet" href="/style.css" />
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:100" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:100" rel="stylesheet" />
     <!-- <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet"> -->
     <script defer src="/bundle.js"></script>
   </head>
